# service-principal-audit

./: .pre-commit-config.yaml  CONTEXT.md  README.md  audit_rbac.py  entra_audit_plan.md  example-audit.html  example-audit.json  implementation_plan.md  pyproject.toml  render_html.py
docs/adr/: 0001-msgraph-sdk-async-with-sync-wrapped-arg.md  0002-report-envelope-and-failure-tiers.md  0003-entra-collector-class.md
issues/: 01-walking-skeleton-identity-audit.md  02-selection-tag-and-ids-file.md  03-azure-rbac-plane-with-fixes.md  04-group-memberships-single-flight.md  05-directory-roles-four-paths.md  06-pim-for-groups-status.md  07-credentials.md  08-api-permissions.md  09-owners.md  10-bounded-concurrency.md  11-html-rendering.md  12-docs-and-example-regeneration.md
prd/: service-principal-audit.md
src/sp_audit/: __init__.py  azure_rbac.py  cli.py  credentials.py  entra.py  models.py  render.py  selection_parse.py  single_flight.py
src/spyglass/: __init__.py  arg_transform.py  auth.py  azure_rbac.py  cli.py  credentials.py  entra.py  graph_errors.py  render.py  report.py
tests/: test_arg_transform.py  test_auth.py  test_azure_rbac.py  test_credentials.py  test_directory_roles.py  test_entra_mapping.py  test_graph_errors.py  test_group_memberships.py  test_pim_membership.py  test_render.py  test_report.py  test_selection_parse.py  test_single_flight.py
