[project]
name = "service-principal-audit"
version = "0.1.0"
description = "Read-only CLI that audits Entra service principals across the directory and Azure RBAC planes into a single JSON report."
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.19",
    "msgraph-sdk>=1.0",
]

[project.scripts]
sp-audit = "sp_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sp_audit"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
src = ["src", "tests"]
# render_html.py is the legacy standalone renderer; it is lifted/rewritten under
# src/sp_audit/render in a later iteration and is not linted in the meantime.
extend-exclude = ["render_html.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
