[project]
name = "spyglass"
version = "0.1.0"
description = "A read-only spyglass for Microsoft Entra service principals: audits the directory and Azure RBAC planes into a single JSON report."
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.19",
    "msgraph-sdk>=1.0",
]

[project.scripts]
spyglass = "spyglass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spyglass"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
src = ["src", "tests"]
# render_html.py is the legacy standalone renderer; it is lifted/rewritten under
# src/spyglass/render in a later iteration and is not linted in the meantime.
extend-exclude = ["render_html.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# The msgraph SDK and kiota emit these DeprecationWarnings from `warn()` calls
# placed directly in class bodies, so they fire at import time regardless of how
# we call the SDK — our code already uses the generic RequestConfiguration. We
# can't act on them, so filter the two known third-party messages here.
filterwarnings = [
    "ignore:GetQueryParameters is deprecated:DeprecationWarning",
    "ignore:This class is deprecated. Please use the generic RequestConfiguration class generated by the generator.:DeprecationWarning",
]
